--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,14 @@ jobs:
   build-and-deploy-to-s3:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout source control
+        uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
       - name: Install yarn
-      - run: npm install --global yarn
+        run: npm install --global yarn
       - name: Install quasar
-      - run: yarn global add @quasar/cli
+        run: yarn global add @quasar/cli
       - name: Quasar Build
-      - run: quasar build
+        run: quasar build
