--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
-      - name: Install yarn
-        run: npm install --global yarn
-      - name: Install quasar
-        run: npm install --global yarn
-      - name: Install dependencies
-        run: yarn install
       - name: Quasar Build
-        run: quasar build
+        run: |
+          rm -rf dist/
+          npm install -g @quasar/cli yarn --force
+          yarn install
+          quasar build
