--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "quasar": "^2.0.0",
     "serve-static": "^1.14.2",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.0",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
